[package]
name = "cloudevents-sdk"
version = "0.6.0"
authors = ["Francesco Guardiani <francescoguard@gmail.com>"]
license-file = "LICENSE"
edition = "2018"
description = "CloudEvents official Rust SDK"
documentation = "https://docs.rs/cloudevents-sdk"
readme = "README.md"
repository = "https://github.com/cloudevents/sdk-rust"
exclude = [
    ".github/*"
]
categories = ["web-programming", "encoding", "data-structures"]

# Enable all features when building on docs.rs to show feature gated bindings
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "cloudevents"

# [features]
# http-binding = ["async-trait", "bytes", "futures", "http"]

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
chrono = { version = "^0.4", features = ["serde"] }
delegate-attr = "^0.2"
base64 = "^0.12"
url = { version = "^2.1", features = ["serde"] }
snafu = "^0.6"
bitflags = "^1.2"
uuid = { version = "1", features = ["v4"] }

# runtime optional deps
async-trait = { version = "^0.1.33" }
bytes = { version = "^1.0"}
futures = { version = "^0.3" }
http = { version = "0.2"}
hyper_wasi = { version = "0.15", features = ["full"]  }
log = "0.4.17"
http-body = { version = "^0.4" }

[dev-dependencies]
rstest = "0.6"
claim = { git = "https://github.com/No9/rust-claim" }
version-sync = "0.9.2"
serde_yaml = "0.8"
rmp-serde = "1"

# runtime dev-deps

url = { version = "^2.1", features = ["serde"] }
serde_json = { version = "^1.0" }
chrono = { version = "^0.4", features = ["serde"] }
mockito = "0.25.1"
mime = "0.3"
tower = { version = "0.4", features = ["util"] }
tokio_wasi = { version = "1", features = ["io-util", "fs", "net", "time", "rt", "macros"] }